style: fix pagination on mobile

--- a/css/partials/framework/_pagination.scss
+++ b/css/partials/framework/_pagination.scss
@@ -35,7 +35,7 @@
 	li {
 		background-color: $black8;
 		position: relative;
-		margin: 0 0.4rem;
+		margin: 0.4rem;
 
 		&:first-child {
 			margin-left: 0;
