--- a/css/partials/theme/_modals.scss
+++ b/css/partials/theme/_modals.scss
@@ -221,11 +221,13 @@
 
 // Mobiles
 @media (max-width: 567px) {
-	// .modal {
-	// 	&-open {
-	// 		padding-right: 0 !important;
-	// 	}
-	// }
+	.modal {
+		&-body {
+			.social-widget {
+				display: none;
+			}
+		}
+	}
 }
 
 // Tablets
